2000-04-18  Pavel Roskin  <pavel_roskin@geocities.com>

	* util/grub-install.in: Don't use `!' in `test' for more
	portability.
	Don't use `for' without `in' for compatability with ash.
	Check install_device before running grub if possible. Added
	error messages if install_device is not set or not unique.
	Exit if mkdir fails.
	Add a message about successful installation.
	Remove unneeded backslash in the final message.
	(convert): use `test -b' instead of `test -e' because ash
	doesn't	understand the later. Correct error message accordingly.
	
2000-04-17  OKUJI Yoshinori  <okuji@gnu.org>

	The user doesn't have to recompile GRUB for his/her buggy BIOS
	any longer. It is configurable to ignore the LBA support bitmap
	at the installation time.
	
	* stage1/stage1.S (force_lba): New variable.
	(stage2_address): Moved forwards, to align some variables in
	natural boundaries.
	(real_start): Check if FORCE_LBA is non-zero, if so, jump to
	skip_lba_bitmap_check, otherwise, check if bit 0 of the support
	bitmap is non-zero.
	Don't use #ifdef for CHECK_LBA_SUPPORT_BITMAP.
	(skip_lba_bitmap_check): New label.
	* stage1/stage1.h (COMPAT_VERSION_MINOR): Set to 1.
	(STAGE1_FORCE_LBA): New macro.
	(STAGE1_STAGE2_ADDRESS): Set to 0x42.
	(STAGE1_STAGE2_SECTOR): Set to 0x44.
	(STAGE1_STAGE2_SEGMENT): Set to 0x48.
	* stage2/asm.S (force_lba): New variable.
	* stage2/bios.c (get_diskinfo): Don't use #ifdef for
	CHECK_LBA_SUPPORT_BITMAP. Instead, check if FORCE_LBA is
	non-zero. If so, don't check the bit 0 of DRP.FLAG.
	* stage2/builtins.c (install_func): Check if a new option
	`--force-lba' is specified. If specified, set IS_FORCE_LBA to 1
	and set ARG to a value returned by skip_to. Otherwise,
	IS_FORCE_LBA is zero.
	Set the "force LBA" flag in STAGE1_BUFFER (the offset is
	STAGE1_FORCE_LBA) to IS_FORCE_LBA.
	Likewise, set the "force LBA" flag in STAGE2_SECOND_BUFFER
	(the offset is STAGE2_FORCE_LBA) to IS_FORCE_LBA.
	If IS_STAGE1_5 is true, then modify the Stage2, regardless of