@@ -75,6 +75,7 @@ char *err_list[] =
   [ERR_WONT_FIT] = "Selected item cannot fit into memory",
   [ERR_WRITE] = "Disk write error",
   [ERR_BAD_ARGUMENT] = "Invaild argument specified",
+  [ERR_UNALIGNED] = "File is not sector aligned",
 };
 
 
